Prevent content from being visible to CTRL-F, etc

--- a/Site/webapp/wdkCustomization/js/client/App/SiteMenu/SiteMenuItem.scss
+++ b/Site/webapp/wdkCustomization/js/client/App/SiteMenu/SiteMenuItem.scss
@@ -19,6 +19,7 @@ $white: #E0E0E0;
   }
   &:hover {
     opacity: 1;
+    visibility: hidden;
   }
   .SiteMenuItem-Submenu {
     right: 0;
